[#30-UPDATE] real estate card

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -1,5 +1,5 @@
 <div class="p-20 mt-52 w-screen flex flex-col gap-5" dir="rtl">
-  <div class="flex gap-2 justify-start mb-10">
+  <div class="flex gap-2 mb-10">
     <div>
       <img src="assets/photos/card-details5.png" class="w-full h-auto" />
     </div>
@@ -122,6 +122,26 @@
 
 
 
-    <div class="w-1/2">this is the real estate card</div>
+    <div class="flex justify-center w-1/2 mt-24">
+      <div class="flex border gap-5 rounded-2xl p-5 w-fit h-fit">
+        <div>
+          <img class="size-16" src="assets/photos/m-aliz.png"/>
+        </div>
+        <div class="flex flex-col gap-3">
+          <div class="flex gap-3">
+            <img class="size-8" src="assets/photos/re-freshte.png"/>
+            <h6 class="text-neutral-gray10">املاک لولمان</h6>
+          </div>
+          <div>
+            <h4 class="text-neutral-gray12">علی ذوقی</h4>
+          </div>
+          <div>
+            <p class="text-body-xxs">امتیاز: ۵ از ۵</p>
+            <p class="text-body-xxs">۶۰۰ آگهی فعال</p>
+          </div>
+          <button class="bg-primary-default rounded text-white text-button-md pr-10 pl-10 pt-2 pb-2 w-64">اطلاعات تماس</button>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
