--- a/src/app/components/home-page/category/category.component.html
+++ b/src/app/components/home-page/category/category.component.html
@@ -1,8 +1,8 @@
-<div class="p-20 flex flex-col w-full m-auto">
-  <div class="mb-10">
+<div class="p-4 md:p-20 flex flex-col w-full mx-auto">
+  <div class="mb-4 md:mb-10">
     <h3 dir="rtl">در سقفینو دنبال چه نوع ملکی هستید</h3>
   </div>
-  <div class="flex flex-row justify-between gap-7">
+  <div class="flex flex-col md:flex-row md:justify-between gap-4 md:gap-7">
     <app-category-card image="tejari" title="تجاری و اداری" houseAmount="23,312"></app-category-card>
     <app-category-card image="villa" title="ویلا" houseAmount="873"></app-category-card>
     <app-category-card image="apartman" title="آپارتمان و برج" houseAmount="15,291"></app-category-card>
