[#35-UPDATE] house detail page

--- a/src/app/components/house-card-page/description/description.component.html
+++ b/src/app/components/house-card-page/description/description.component.html
@@ -1,11 +1,11 @@
 <div class="flex flex-col gap-3 mt-6">
   <h4>توضیحات</h4>
   <div class="flex flex-col">
-    <p class="text-body-xs text-neutral-gray11">سن بنا: نوساز</p>
-    <p class="text-body-xs text-neutral-gray11">موقعيت جغرافيايى بنا: شمالى</p>
-    <p class="text-body-xs text-neutral-gray11">نوع سند: شخصى</p>
-    <p class="text-body-xs text-neutral-gray11">امكانات امنيتى: آيفون تصويرى، درب ضدسرقت</p>
-    <p class="text-body-xs text-neutral-gray11">ساير امكانات: كمد ديورى، ينجره ها UPVC</p>
-    <p class="text-body-xs text-neutral-gray11">زمان بازيد ٧ صبح تا ١١ شب</p>
+    <p class="text-body-xs text-neutral-gray11">سن بنا: {{ houseDetail.age }}</p>
+    <p class="text-body-xs text-neutral-gray11">موقعيت جغرافيايى بنا: {{ houseDetail.location }}</p>
+    <p class="text-body-xs text-neutral-gray11">نوع سند: {{ houseDetail.documentType }}</p>
+    <p class="text-body-xs text-neutral-gray11">امكانات امنيتى: {{ houseDetail.security }}</p>
+    <p class="text-body-xs text-neutral-gray11">ساير امكانات: {{ houseDetail.otherFeatures }}</p>
+    <p class="text-body-xs text-neutral-gray11">زمان بازيد {{ houseDetail.visitingHours[1] }} صبح تا {{ houseDetail.visitingHours[0] }} شب</p>
   </div>
 </div>
