--- a/src/app/components/house-card-page/equipments/equipments.component.html
+++ b/src/app/components/house-card-page/equipments/equipments.component.html
@@ -1,13 +1,13 @@
 <div class="flex flex-col gap-3 mt-6">
   <h4>امکانات</h4>
   <div class="grid grid-cols-2">
-    <p class="text-body-xs text-neutral-gray11">پارکینگ: ۱</p>
-    <p class="text-body-xs text-neutral-gray11">سرويس بهداشتى: ٢</p>
-    <p class="text-body-xs text-neutral-gray11">انبارى: ۱</p>
-    <p class="text-body-xs text-neutral-gray11">نوع سرويس بهداشتى: فرنكى</p>
-    <p class="text-body-xs text-neutral-gray11">آسانسور: ٢</p>
-    <p class="text-body-xs text-neutral-gray11">سيستم سرمايش: چيلر</p>
-    <p class="text-body-xs text-neutral-gray11">جنس كف: سراميك</p>
-    <p class="text-body-xs text-neutral-gray11">سيستم كرمايش: نوساز</p>
+    <p class="text-body-xs text-neutral-gray11">پارکینگ: {{ houseDetail.parking }}</p>
+    <p class="text-body-xs text-neutral-gray11">سرويس بهداشتى: {{ houseDetail.bathroom }}</p>
+    <p class="text-body-xs text-neutral-gray11">انبارى: {{ houseDetail.storage }}</p>
+    <p class="text-body-xs text-neutral-gray11">نوع سرويس بهداشتى: {{ houseDetail.bathroomType }}</p>
+    <p class="text-body-xs text-neutral-gray11">آسانسور: {{ houseDetail.elevator }}</p>
+    <p class="text-body-xs text-neutral-gray11">سيستم سرمايش: {{ houseDetail.coolingSystem }}</p>
+    <p class="text-body-xs text-neutral-gray11">جنس كف: {{ houseDetail.floorMaterial }}</p>
+    <p class="text-body-xs text-neutral-gray11">سيستم كرمايش: {{ houseDetail.heatingSystem }}</p>
   </div>
 </div>
