[#36-UPDATE] house data

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -10,7 +10,7 @@
         </div>
       </div>
       <div class="flex flex-col gap-5">
-        <app-main-detail [house]="house"></app-main-detail>
+        <app-main-detail [house]="house" [houseDetail]="houseDetail"></app-main-detail>
         <app-equipments [houseDetail]="houseDetail"></app-equipments>
         <app-description [houseDetail]="houseDetail"></app-description>
         <app-location [house]="house"></app-location>
