--- a/src/app/components/house-card-page/main-detail/main-detail.component.html
+++ b/src/app/components/house-card-page/main-detail/main-detail.component.html
@@ -10,13 +10,13 @@
     </div>
     <div class="flex flex-col gap-2 bg-neutral-gray2 rounded-2xl p-10 w-44">
       <h4 class="self-center">اتاق</h4>
-      <div class="self-center"> {{house.area}}
-        متر</div>
+      <div class="self-center"> {{houseDetail.room}}
+       خواب </div>
     </div>
     <div class="flex flex-col gap-2 bg-neutral-gray2 rounded-2xl p-10 w-44">
       <h4 class="self-center">طبقه</h4>
-      <div class="self-center"> {{house.area}}
-        متر</div>
+      <div class="self-center"> {{houseDetail.floor}}
+        </div>
     </div>
   </div>
   <div class="flex flex-col gap-3">
