--- a/src/app/components/searchbar/searchbar.component.html
+++ b/src/app/components/searchbar/searchbar.component.html
@@ -6,10 +6,10 @@
   <div>
     <form class="flex flex-row items-center justify-end">
       <mat-form-field class="flex-grow" dir="rtl">
-        <input matInput placeholder="شهر مورد نظر را انتخاب کنید" (input)="onInputChange()" [formControl]="cityControl" [matAutocomplete]="auto">
+        <input matInput placeholder="شهر مورد نظر را انتخاب کنید" [value]="cityControl.value?.name" (input)="onInputChange()" [formControl]="cityControl" [matAutocomplete]="auto">
         <mat-icon matPrefix>search</mat-icon>
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onCitySelectionChange()">
-          <mat-option *ngFor="let city of filteredCities$ | async" [value]="city.id">{{ city.name }}</mat-option>
+          <mat-option *ngFor="let city of filteredCities$ | async" [value]="city">{{ city.name }}</mat-option>
         </mat-autocomplete>
       </mat-form-field>
     </form>
