[#38-UPDATE] private & public of all functions

--- a/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
+++ b/src/app/components/house-card-page/house-card-page-main/house-card-page-main.component.html
@@ -13,7 +13,7 @@
         <app-main-detail [house]="house" [houseDetail]="houseDetail"></app-main-detail>
         <app-equipments [houseDetail]="houseDetail"></app-equipments>
         <app-description [houseDetail]="houseDetail"></app-description>
-        <app-location [house]="house"></app-location>
+        <app-location></app-location>
         <app-mini-detail [houseDetail]="houseDetail" [house]="house"></app-mini-detail>
 
         <div class="flex justify-between w-1/2">
