[#40-UPDATE] house card and houses

--- a/src/app/components/search-page/houses/houses.component.html
+++ b/src/app/components/search-page/houses/houses.component.html
@@ -3,7 +3,7 @@
     <h3>جدید ترین خانه های اجاره ای {{cityName}}</h3>
     <button (click)="onSeeMoreClick()" class="text-neutral-gray9">مشاهده همه</button>
   </div>
-  <div class="grid grid-cols-4 grid-rows-2 gap-5">
+  <div class="grid gap-5 grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-4 ">
     <app-houses-card [cityName]="cityName" *ngFor="let house of housesData" [housesCardInputModel]="house"></app-houses-card>
   </div>
 </div>
