--- a/src/app/components/search-page/houses-card/houses-card.component.html
+++ b/src/app/components/search-page/houses-card/houses-card.component.html
@@ -1,4 +1,4 @@
-<div class="relative w-80 bg-white rounded-2xl overflow-hidden border border-neutral-gray4 h-96" dir="rtl">
+<div class="relative w-fit pb-5  h-fit bg-white rounded-2xl overflow-hidden border border-neutral-gray4" dir="rtl">
   <div class="absolute left-5 top-5 bg-neutral-gray9 rounded pt-3 pr-2 pl-2">
     <p class="text-body-xs text-white"> {{housesCardInputModel.hoursPosted}} ساعت پیش</p>
   </div>
